--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,20 @@
 {
-    "name": "fancyguy/guzzle-client",
-    "description": "An abstract Guzzle 3 client to be extended by other FancyGuy Clients",
-    "license": "BSD-3-Clause",
-    "authors": [
-        {
-            "name": "Steve Buzonas",
-            "email": "steve@fancyguy.com"
-        }
-    ],
-    "autoload": {
-        "psr-0": { "FancyGuy\\Component\\GuzzleClient": "src/" }
-    },
-    "require": {
-        "guzzle/guzzle": ">3.0"
-    }
+	"name": "fancyguy/guzzle-client",
+	"description": "An abstract Guzzle 3 client to be extended by other FancyGuy Clients",
+	"license": "BSD-3-Clause",
+	"authors": [
+		{
+			"name": "Steve Buzonas",
+			"email": "steve@fancyguy.com"
+		}
+	],
+	"autoload": {
+		"psr-0": {
+			"FancyGuy\\Component\\GuzzleClient": "src/"
+		}
+	},
+	"require": {
+		"guzzle/guzzle": ">3.0"
+	},
+	"target-dir": "src/FancyGuy/Component/GuzzleClient"
 }
